--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,12 @@
   <%= @user.age %>
 </p>
 
+<p>
+  <strong>Orders</strong>
+  <% @orders.each do |order| %> <br>
+    <%= order.total %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
