--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Total</th>
+      <th>User ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.total %></td>
+        <td><%= order.user_id %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
